--- a/avby-front/package.json
+++ b/avby-front/package.json
@@ -10,14 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
     "axios": "^1.6.8",
     "jwt-decode": "^4.0.0",
+    "node-sass": "^9.0.0",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-gallery-carousel": "^0.4.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
