--- a/avby-front/package.json
+++ b/avby-front/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
+    "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "jwt-decode": "^4.0.0",
     "node-sass": "^9.0.0",
@@ -18,8 +19,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-gallery-carousel": "^0.4.0",
+    "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -29,6 +33,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "sass": "^1.75.0",
     "vite": "^5.2.0"
   }
 }
