--- a/avby-front/package.json
+++ b/avby-front/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-gallery-carousel": "^0.4.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "react-spinners": "^0.13.8",
