--- a/avby-front/package.json
+++ b/avby-front/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "react-spinners": "^0.13.8",
+    "react-use-websocket": "^4.8.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0"
   },
